--- a/QGReports/QGReport.BlazorApp/Components/Account/Pages/Login.razor
+++ b/QGReports/QGReport.BlazorApp/Components/Account/Pages/Login.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using QGReports.Domain.Models
+@using QGTransoarent.Application.Services.IdentityServices
 
 @inject SignInManager<UserModel> SignInManager
 @inject ILogger<Login> Logger
