--- a/QGReports/QGReport.BlazorApp/Components/Account/Pages/Register.razor
+++ b/QGReports/QGReport.BlazorApp/Components/Account/Pages/Register.razor
@@ -26,11 +26,42 @@
             <DataAnnotationsValidator />
             <h2>Create a new account.</h2>
             <hr />
-            <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <InputText @bind-Value="Input.FirstName" id="Input.FirstName" class="form-control" autocomplete="firstname" aria-required="true" placeholder="Вася" />
+                <label for="Input.FirstName">FirstName</label>
+                <ValidationMessage For="() => Input.FirstName" class="text-danger" />
+            </div> 
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="Input.LastName" id="Input.LastName" class="form-control" autocomplete="lastname" aria-required="true" placeholder="Пупкин" />
+                <label for="Input.LastName">LastName</label>
+                <ValidationMessage For="() => Input.LastName" class="text-danger" />
+            </div>
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="Input.MiddleName" id="Input.MiddleName" class="form-control" autocomplete="middlename" aria-required="true" placeholder="Пупкинович" />
+                <label for="Input.MiddleName">MiddleName</label>
+                <ValidationMessage For="() => Input.MiddleName" class="text-danger" />
+            </div> 
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="Input.Email" id="Input.Email" class="form-control" autocomplete="email" aria-required="true" placeholder="example.com" />
                 <label for="Input.Email">Email</label>
                 <ValidationMessage For="() => Input.Email" class="text-danger" />
+            </div>
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="Input.PhoneNumber" id="Input.PhoneNumber" class="form-control" autocomplete="phonenumber" aria-required="true" placeholder="877775551122" />
+                <label for="Input.PhoneNumber">PhoneNumber</label>
+                <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
+            </div>
+
+            <div class="form-floating mb-3">
+                <InputSelect @bind-Value="Input.Role" id="Input.Role"  class="form-control form-select" autocomplete="role" aria-required="true" placeholder="">
+                   <option value="none">None</option>
+                    @foreach(var item in Enum.GetNames(typeof(QGReports.Domain.Enums.Roles)))
+                    {
+                        <option class="" value="@item">@item</option>
+                    }
+                </InputSelect>
+                <label for="Input.Role">Role</label>
+                <ValidationMessage For="() => Input.Role" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.Password" id="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
@@ -42,6 +73,9 @@
                 <label for="Input.ConfirmPassword">Confirm Password</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
+
+
+            <ValidationSummary class="text-danger" role="alert" />
             <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </EditForm>
     </div>
@@ -72,8 +106,18 @@
         await UserStore.SetUserNameAsync(user, Input.Email, CancellationToken.None);
         var emailStore = GetEmailStore();
         await emailStore.SetEmailAsync(user, Input.Email, CancellationToken.None);
-        var result = await UserManager.CreateAsync(user, Input.Password);
+        //Hand data
+        user.FirstName = Input.FirstName;
+        user.LastName = Input.LastName;
+        user.MiddleName = Input.MiddleName;
+        user.PhoneNumber = Input.PhoneNumber;
+        user.Email = Input.Email;
+        user.Role = (QGReports.Domain.Enums.Roles)Enum.Parse(typeof(QGReports.Domain.Enums.Roles), Input.Role);
+        user.EmailConfirmed = true;
+        user.PhoneNumberConfirmed = true;
 
+        var result = await UserManager.CreateAsync(user, Input.Password);
+        await SignInManager.UserManager.SetLockoutEnabledAsync(user, false);
         if (!result.Succeeded)
         {
             identityErrors = result.Errors;
@@ -126,6 +170,34 @@
 
     private sealed class InputModel
     {
+        [Required]
+        [StringLength(100, MinimumLength = 3)]
+        [Display(Name = "FirstName")]
+        public string FirstName { get; set; } = "";
+        
+        [Required]
+        [StringLength(100, MinimumLength = 3)]
+        [Display(Name = "LastName")]
+        public string LastName { get; set; } = "";
+
+        [Required]
+        [StringLength(100, MinimumLength = 3)]
+        [Display(Name = "MiddleName")]
+        public string MiddleName { get; set; } = "";
+        
+        [Required]
+        [StringLength(100, MinimumLength = 3)]
+        [DataType(DataType.PhoneNumber)]
+        [Display(Name = "PhoneNumber")]
+        public string PhoneNumber { get; set; } = "";
+        
+        [Required]
+        [StringLength(100, MinimumLength = 3)]
+        [DataType(DataType.PhoneNumber)]
+        [Display(Name = "Role")]
+        public string Role { get; set; } = "";
+
+
         [Required]
         [EmailAddress]
         [Display(Name = "Email")]
